--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,8 +32,19 @@ spring:
     caffeine:
       spec: maximumSize=500,expireAfterAccess=600s
 
+  main:
+    allow-bean-definition-overriding: true
+  mvc:
+    throw-exception-if-no-handler-found: true
+  messages:
+   basename: messages
+
 logging:
   level:
     root: WARN
     com.mahou.bootjava.restaurantvoting: INFO
 #    org.springframework.security.web.FilterChainProxy: DEBUG
+
+server:
+  servlet:
+    register-default-servlet: true
